--- a/iam/gestion_identidades/templates/base.html
+++ b/iam/gestion_identidades/templates/base.html
@@ -20,7 +20,7 @@
 </head>
 <style>
     body {
-        background-image: url("{% static 'imgs/1.jpg' %}");
+        background-image: url("");
         background-size: cover;  
         background-position: center center;  
         background-repeat: no-repeat;
