--- a/iam/gestion_identidades/templates/home.html
+++ b/iam/gestion_identidades/templates/home.html
@@ -7,7 +7,7 @@
         <form action="" method="POST">
             {% csrf_token %}
             <div class="text-center mb-3">
-                <img src="{% static 'imgs/' %}" 
+                <img src="{% static 'imgs/iam.jpg' %}" 
                 alt="Logo de identidades" 
                 style="max-width: 150px; height: auto;">
             </div>
@@ -16,7 +16,10 @@
             <label class="TT" for="password"><b>Contraseña</b></label>
             <input type="password" class="form-control" name="password" id="password" placeholder="Contraseña" required><br>
             <div class="boton mb-3">
-                <input type="submit" class="text-center btn btn-success" name="login" value="Iniciar sesión" style="font-family: Lato;">
+                <center>
+                        <input type="submit" class="text-center" name="login" value="Iniciar sesión" style="font-family: Lato;">
+                </center>
+               
             </div>
             {% if messages %}
                 {% for message in messages %}
@@ -27,9 +30,8 @@
             {% endif %}
             <div class="text-center">
 
-
-              
                 <center>
+                   <a href="">Crear usuario</a>
                 </center>
                 
             </div>
