--- a/iam/gestion_identidades/templates/home.html
+++ b/iam/gestion_identidades/templates/home.html
@@ -40,8 +40,8 @@
     </div> 
     <br>
 
-    <center style="color: white;">
-   
+    <center style="color: black;">
+      IAM /  d4n7.dev - v0.1
       
     </center>
 </div>
