--- a/iam/gestion_identidades/templates/home.html
+++ b/iam/gestion_identidades/templates/home.html
@@ -31,7 +31,7 @@
             <div class="text-center">
 
                 <center>
-                   <a href="">Crear usuario</a>
+                   <a href="{% url 'registro' %}">Crear usuario</a>
                 </center>
                 
             </div>
